--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <div>Caja 2</div>
             <div>Caja 3</div>
             <div>Caja 4</div>
+            <h2>hola mundo</h2>
         </section>
     </main>
 </body>
