--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
             <div>Caja 4</div>
             <h2>hola mundo</h2>
         </section>
+
+        <h3>como estan?</h3>
+        <p>muy bien</p>
     </main>
 </body>
 </html>
